First version of browser dock to control AVER camera

--- a/cabrini-dock.html
+++ b/cabrini-dock.html
@@ -71,8 +71,11 @@
             <div>
                 <button class="SlideButton" style="margin-top:5px;" onclick="do_slides('Toggle');">Toggle Slide View</button>
                 <button class="SlideButton" onclick="do_slides('Next');">Next Slide</button>
-                <button class="SlideButton" onclick="do_slides('Previous');">Previous Slide</button>
                 <button class="SlideButton" onclick="do_slides('Reload');">Reload Slides</button>
+                <button class="SlideButton" onclick="do_slides('Previous');">Previous Slide</button>
+                <div class="SlideImage"  id="SlideImage">
+                    <canvas id="SlideCanvas">
+                </div>
             </div>
         </div>
     </div>
