Move PTZ controls to right of preset list: better fit on 125% scaled screen

--- a/camera-control-page2.html
+++ b/camera-control-page2.html
@@ -18,7 +18,7 @@
         <div id="PTZZoomIn" onmousedown="do_action('zoomin', 'start')" onmouseup="do_action('zoomin', 'stop')"></div>
         <div id="PTZZoomOut" onmousedown="do_action('zoomout', 'start')" onmouseup="do_action('zoomout', 'stop')"></div>
         <div id="PresetButtons">
-            <button id="PresetButton" onclick="change_page('camera-control.html');">1 <-</button>
+            <button id="PresetButton" onclick="change_page('camera-control.html');">Back</button>
             <button id="PresetButton" onclick="do_show_preset()">SHOW</button>
             <button id="PresetButton" onclick="do_set_preset()">SET</button>
         </div>
