--- a/camera-control.html
+++ b/camera-control.html
@@ -18,12 +18,11 @@
         <div id="PTZZoomIn" onmousedown="do_action('zoomin', 'start')" onmouseup="do_action('zoomin', 'stop');"></div>
         <div id="PTZZoomOut" onmousedown="do_action('zoomout', 'start')" onmouseup="do_action('zoomout', 'stop');"></div>
         <div id="PresetButtons">
-            <button id="PresetButton" onclick="change_page('camera-control-page2.html');">-> 2</button>
+            <button id="PresetButton" onclick="change_page('camera-control-page2.html');">Edit</button>
         </div>
     </div>
 
     <p id='Status'>Presets</p>
-
     <select name="presets" id="Presets" size="16" onchange="do_select(this)">
     </select>  
 </body>
