Move Program and Previous labels to same line as camera name

--- a/cabrini-dock.html
+++ b/cabrini-dock.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="cabrini-dock.css">
     <div class="grid-container">
         <div class="grid-child">
-            <div class="Title" id="Title0">Camera 1</div>
             <div>
+                <span class="Title" id="Title0">Camera 1</span>
                 <span class="ProgPrev" id="Preview0">Preview</span>
                 <span class="ProgPrev" id="Program0">Program</span>
             </div>
@@ -40,8 +40,8 @@
         </div>
 
         <div class="grid-child">
-            <div class="Title" id="Title1">Camera 2</div>
             <div>
+                <span class="Title" id="Title1">Camera 2</span>
                 <span class="ProgPrev" id="Preview1">Preview</span>
                 <span class="ProgPrev" id="Program1">Program</span>
             </div>
