Finish functionality, add reset for stats

--- a/cabrini-dock.html
+++ b/cabrini-dock.html
@@ -88,7 +88,8 @@
                     <canvas id="Slide2Canvas">
                 </div>
                 <div class="Title">Statistics</div>
-                    <div class="Statistics" id=stats>stats</div>
+                    <div class="Statistics" id=stats>Not connected to OBS</div>
+                    <button class="SlideButton" onclick="reset_stats();">Reset Stats</button>
                 </div>
             </div>
         </div>
