--- a/cabrini-dock.html
+++ b/cabrini-dock.html
@@ -75,7 +75,7 @@
             <div>
                 <button class="SlideButton" onclick="do_slides('Previous');">Previous Slide</button>
                 <button class="SlideButton" onclick="do_slides('Next');">Next Slide</button>
-                <button class="SlideButton" onclick="do_slides('Toggle');">Toggle Slide View</button>
+                <button class="SlideButton" onclick="do_slides('Toggle');">Show / Hide</button>
                 <button class="SlideButton" onclick="do_slides('Reload');">Reload Slides</button>
             </div>
             <div class="ScrollingSlideArea">
