--- a/cabrini-dock.html
+++ b/cabrini-dock.html
@@ -90,6 +90,8 @@
                 <div class="Title">Statistics</div>
                     <div class="Statistics" id=stats>Not connected to OBS</div>
                     <button class="SlideButton" onclick="reset_stats();">Reset Stats</button>
+                    <button class="SlideButton" onclick="dump_stats();">Dump Stat Log</button>
+                    <div class="Statistics" id=log_data></div>
                 </div>
             </div>
         </div>
