--- a/garvey-dock2.html
+++ b/garvey-dock2.html
@@ -10,8 +10,8 @@
         <div class="grid-child">
             <div>
                 <span class="Title"    id="Title0">Camera 1</span>
-                <span class="ProgPrev" id="Preview0">Preview</span>
-                <span class="ProgPrev" id="Program0">Program</span>
+                <span class="ProgPrev" id="Preview0">x</span>
+                <span class="ProgPrev" id="Program0">y</span>
             </div>
 
             <div class="PanTiltZoomPanel">
@@ -31,7 +31,7 @@
                     </svg>
 
                 </div>
-                <canvas id="pan_tilt_stick0" style="position:absolute; top:0px; left:0px;" width="100" height="100">
+                <canvas id="pan_tilt_stick0" style="position:absolute; top:0px; left:0px;" width="100px" height="100px">
                 Your browser does not support the HTML5 canvas tag.</canvas>
 
                 <!----------------- Zoom Joystick ----------------------->
@@ -41,24 +41,28 @@
                         <line x1="70" y1="270" x2="90" y2="290" stroke-width="12" />
                     </svg>
                 </div>
-                <canvas id="zoom_stick0" style="position:absolute; top:0px; left:110px;" width="20" height="100">
+                <canvas id="zoom_stick0" style="position:absolute; top:0px; left:110px;" width="20px" height="100px">
                 Your browser does not support the HTML5 canvas tag.</canvas>
-
-                <div class="PresetButtons">
-                    <input type="checkbox" id="Edit0" onclick="do_edit(0, this);" />
-                    <label for="Edit0">Edit</label>
-                    <div id="Hide0">
-                        <button class="PresetButton" onclick="do_show_preset(0)">SHOW</button>
-                        <button class="PresetButton" onclick="do_set_preset(0)">SET</button>
-                        <button class="PresetButton" onclick="do_save_load(0)">Save/load</button>
-                    </div>
-                </div>
             </div>
-
+        </div>
+        <div class="grid-child">
             <div class="PresetArea">
                 <div class="Status" id='Status0'>Presets</div>
                 <div>
-                    <select class="Presets" id="Presets0" size="16" onchange="do_select(0, this)"></select>
+                    <select class="Presets" id="Presets0" size="10" onchange="do_select(0, this)"></select>
+                </div>
+            </div>
+        </div>
+        <div class="grid-last-child">
+            <div class="PresetButtons">
+                <input type="checkbox" id="Edit0" onclick="do_edit(0, this);" />
+                <label for="Edit0">Edit</label>
+                <div id="Hide0">
+                    <button class="PresetButton" onclick="do_show_preset(0)">SHOW</button>
+                    <button class="PresetButton" onclick="do_set_preset(0)">SET</button>
+                    <button class="PresetButton" onclick="do_save_load(0)">Save/load</button>
+                    <button class="PresetButton" onclick="do_reset(0);">Reset</button>
+                    <button class="PresetButton" onclick="do_home(0);">Home</button>
                 </div>
             </div>
         </div>
@@ -70,7 +74,7 @@
         <p id="text-here">Save presets to, or load presets from, a file</p>
         <button id="savePre" class="SlideButton" onclick="do_save_load('save');">Save...</button>
         <button id="loadPre" class="SlideButton" onclick="do_save_load('load');">Load...</button>
-        <button class="SlideButton" onclick="do_save_load('cancel');">Cancel/Close</button>
+        <button class="SlideButton" onclick="do_save_load('cancel');">Close</button>
         <input type="file" id="preset_file" style="display:none" accept=".json,.txt" onchange="uploadPresetFile(this.files);">
       </div>
     </div>
